fix(xiong): add semi-ui

--- a/src/components/nineSquaresGrid/index.css
+++ b/src/components/nineSquaresGrid/index.css
@@ -88,3 +88,30 @@
     transform-origin:center 50%;
     transform: rotate(-90deg);
 }
+
+.cell {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    display: grid;
+    grid-template-rows: 34px auto;
+}
+
+.cell-header {
+    width: 100%;
+    height: 100%;
+}
+
+.cell-content {
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+}
+
+.cell-content-group {
+    width: 100%;
+    height: max-content;
+
+}
