fix(xiong): add semi-ui

--- a/src/components/configPanel/index.css
+++ b/src/components/configPanel/index.css
@@ -147,3 +147,14 @@
     color: #646A73;
 }
 
+
+.delete-icon {
+    width: 15px;
+    height: 15px;
+}
+
+
+.add-icon {
+    width: 10px;
+    height: 10px;
+}
