--- a/src/components/nineSquaresGrid/index.css
+++ b/src/components/nineSquaresGrid/index.css
@@ -102,6 +102,19 @@
 .cell-header {
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: row;
+    padding: 0 16px;
+}
+
+.cell-header-left-text {
+    margin-left: 0;
+    height: 100%;
+}
+.cell-header-right-text {
+    height: 100%;
+    margin-left: auto;
+    margin-right: 0;
 }
 
 .cell-content {
@@ -110,10 +123,10 @@
     overflow-y: scroll;
     display: flex;
     flex-direction: column;
+    padding: 8px 16px;
 }
 
 .cell-content-group {
     width: 100%;
     height: max-content;
-
 }
