--- a/src/components/nineSquaresGrid/index.css
+++ b/src/components/nineSquaresGrid/index.css
@@ -61,6 +61,7 @@
 .grid-content {
     width: 100%;
     height: 100%;
+    overflow: hidden;
     grid-area: 1/2/2/3;
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
@@ -119,14 +120,30 @@
 
 .cell-content {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    font-size: 14px;
+}
+
+.cell-content-category {
+    width: 100%;
+    font-size: 14px;
+    line-height: 22px;
+    height: 22px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.cell-content-scroll {
+    width: 100%;
     height: 100%;
     overflow-y: scroll;
     display: flex;
     flex-direction: column;
     padding: 8px 16px;
 }
-
 .cell-content-group {
     width: 100%;
     height: max-content;
+    border-left: 3px solid transparent;
 }
