--- a/src/components/nineSquaresGrid/index.css
+++ b/src/components/nineSquaresGrid/index.css
@@ -68,12 +68,13 @@
 }
 
 .side-bar-label {
+    position: absolute;;
     font-family: "PingFang SC";
     width: max-content;
     font-weight: 500;
     font-size: 14px;
-    line-height: 32px;
-    height: 32px;
+    line-height: 22px;
+    height: 22px;
     text-align: center;
     overflow: hidden;
 }
@@ -111,11 +112,13 @@
 .cell-header-left-text {
     margin-left: 0;
     height: 100%;
+    line-height: 33px;
 }
 .cell-header-right-text {
     height: 100%;
     margin-left: auto;
     margin-right: 0;
+    line-height: 33px;
 }
 
 .cell-content {
