--- a/src/components/nineSquaresGrid/index.css
+++ b/src/components/nineSquaresGrid/index.css
@@ -12,6 +12,16 @@
     box-sizing: border-box;
 }
 
+.grid-container-phone {
+    gap: 2px;
+    /* left side bar 32 + 2 + 32 */
+    grid-template-columns: auto;
+    /* bottom side bar 32 + 2 + 32 */
+    grid-template-rows: auto;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
 .left-side-bar {
     width: 100%;
     height: 100%;
