--- a/src/components/nineSquaresGrid/index.css
+++ b/src/components/nineSquaresGrid/index.css
@@ -5,9 +5,9 @@
 .grid-container {
     gap: 2px;
     /* left side bar 32 + 2 + 32 */
-    grid-template-columns: 66px auto;
+    grid-template-columns: 62px auto;
     /* bottom side bar 32 + 2 + 32 */
-    grid-template-rows: auto 66px;
+    grid-template-rows: auto 62px;
     padding: 10px;
     box-sizing: border-box;
 }
@@ -113,7 +113,7 @@
     height: 100%;
     overflow: hidden;
     display: grid;
-    grid-template-rows: 34px auto;
+    grid-template-rows: 30px auto;
 }
 
 .cell-header {
@@ -127,7 +127,8 @@
 .cell-header-left-text {
     margin-left: 0;
     height: 100%;
-    line-height: 33px;
+    line-height: 30px;
+    font-size: 12px;
     text-align: left;
     overflow: hidden;
     width: 100%;
@@ -137,7 +138,8 @@
     height: 100%;
     margin-left: auto;
     margin-right: 0;
-    line-height: 33px;
+    font-size: 12px;
+    line-height: 30px;
     text-align: right;
     overflow: hidden;
     width: 100%;
@@ -178,8 +180,15 @@
     flex-wrap: wrap;
     row-gap: 8px;
     column-gap: 8px;
+    padding-left: 7px;
 }
 
+.person-container {
+    display: flex;
+    flex-direction: row;
+    column-gap: 7px;
+    align-items: center;
+}
 .person-label {
     font-family: "PingFang SC";
     width: max-content;
@@ -190,5 +199,13 @@
     height: 22px;
     text-align: center;
     overflow: hidden;
-    text-overflow: ellipsis;
+}
+
+.text-ellipsis {
+    /*超出的文本隐藏*/
+    overflow:hidden;
+    /*溢出用省略号显示*/
+    text-overflow:ellipsis;
+    /*溢出不换行*/
+    white-space:nowrap;
 }
