--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,11 @@
 
 html,
 body {
+    width: 100%;
+    height: 100%;
     background: transparent none !important;
+}
+
+#root {
+    height: 100%;
 }
