--- a/src/components/configPanel/index.css
+++ b/src/components/configPanel/index.css
@@ -179,3 +179,11 @@
 .action-container {
     cursor: pointer;
 }
+
+.semi-icon svg path {
+    fill: var(--svg-path-fill);
+}
+
+.semi-icon-default svg path {
+    fill: var(--svg-path-fill);
+}
