fixZ(xiong): save

--- a/src/components/configPanel/index.css
+++ b/src/components/configPanel/index.css
@@ -187,3 +187,11 @@
 .semi-icon-default svg path {
     fill: var(--svg-path-fill);
 }
+
+.semi-select-option-disabled .semi-icon svg path {
+    fill: var(--svg-path-fill-disable);
+}
+
+.semi-select-option-disabled .semi-icon svg path {
+    fill: var(--svg-path-fill-disable);
+}
