--- a/src/components/configPanel/index.css
+++ b/src/components/configPanel/index.css
@@ -195,3 +195,14 @@
 .semi-select-option-disabled .semi-icon svg path {
     fill: var(--svg-path-fill-disable);
 }
+
+
+.cell-content-scroll::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge, and Firefox */
+.cell-content-scroll {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
