--- a/src/components/nineSquaresGrid/index.css
+++ b/src/components/nineSquaresGrid/index.css
@@ -171,6 +171,16 @@
     flex-direction: column;
     padding: 8px 16px;
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+.overflow-y-scroll::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge, and Firefox */
+.overflow-y-scroll {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
 .cell-content-group {
     width: 100%;
     height: max-content;
